# AI_Academy

./: .firebaserc  .gitignore  GEMINI.md  README-INTEGRATION.md  README.md
.github/: copilot-instructions.md
AI_Docs/referance code/: firestore.py  page.tsx  settings.py
AI_Docs/tasks/: chatbot.md  client.md  deployment_google_cloud.md  firestore_database.md  server.md
AI_Docs/template/: task_template.md
Client/: FIREBASE_SETUP.md  GEMINI.md  README.md  build_and_transfer.ps1  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Client/src/: App.tsx  index.css  main.tsx
Client/src/components/: AuthorCard.tsx  CourseCard.tsx  DashboardLayout.tsx  Navigation.tsx  Sidebar.tsx  ThemeToggle.tsx  UserProfile.tsx  YouTubePlayer.tsx
Client/src/contexts/: AuthContext.tsx
Server/: .env  Dockerfile  GEMINI.md  README.md  ai_academy.db  initialize_courses.py  initialize_database.py  install_and_run.py  pyproject.toml  requirements.txt  run_app.py  run_server.bat  setup_and_run.bat  start_server.ps1
Server/app/: main.py
Server/app/core/: auth.py  security.py
Server/app/db/: database.py  firestore.py  init_db.py
Server/app/models/: __init__.py  user.py
Server/app/routes/: __init__.py  api.py  auth.py  settings.py  users.py
Server/app/schemas/: user.py
Server/static/: index.html
Server/static/assets/: index-D0o9L6fu.css  index-D3Ef9Y3V.css  index-DPOEC3yS.js  index-D_skiQVS.css  index-KaVCTWLy.js  index-nyCidM51.js  index-r9329F0K.js
dataconnect/: dataconnect.yaml
dataconnect/example/: connector.yaml
(+26 files in other folders)
